--- a/src/main/resources/static/css/order.css
+++ b/src/main/resources/static/css/order.css
@@ -77,7 +77,6 @@ table {
     font-weight: 600;
 }
 
-
 table td .sort {
     color: antiquewhite;
     background: rgb(113, 3, 113);
@@ -93,24 +92,69 @@ table td .sort {
     font-size: 14px;
     font-weight: 500;
     color: white;
-  }
-  
-  .status.pending {
+}
+
+.status.pending {
     background: #e9b10a;
-  }
-  
-  .status.processing {
+}
+
+.status.processing {
     background: #1795ce;
-  }
-  
-  .status.shipping {
+}
+
+.status.shipping {
     background: rgb(255, 0, 251);
-  }
-  
-  .status.completed {
+}
+
+.status.completed {
     background: rgb(0, 212, 60);
-  }
-  
-  .status.declined {
+}
+
+.status.declined {
     background: rgb(255, 0, 0);
-  }
+}
+
+.productListing {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-bottom: 10px;
+    margin: 10px;
+    -webkit-overflow-scrolling: touch;
+    transform: rotateX(180deg);
+}
+
+.productListing .card {
+    text-align: center;
+    width: 300px;
+    margin: 10px 10px 5px;
+    height: 300px;
+    box-shadow: 0 1px 25px rgba(0, 0, 0, 0.686);
+    background-color: white;
+    border-radius: 20px;
+    transform: rotateX(-180deg);
+}
+
+.productListing .card .header {
+    display: block;
+    margin: 10px auto;
+}
+
+.productListing .card .child {
+    font-size: 14px;
+    color: rgb(153, 153, 153);
+}
+
+.productListing .card .side {
+    font-size: 14px;
+    color: rgb(34, 34, 34);
+}
+
+#product-image {
+    margin: auto;
+    height: 200px;
+    width: 200px;
+    box-sizing: border-box;
+    border-radius: 100px;
+    background-size: cover;
+}
