--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="top-container">
 
-            <h1>Contact Us - Deep Waters</h1>
+            <h1>Contact Us - The Uncommon Catch</h1>
             <p>We would love to respond to any enquires.
                 Feel free to get in touch.
             </p>
