--- a/src/main/resources/static/css/net.css
+++ b/src/main/resources/static/css/net.css
@@ -56,16 +56,20 @@ body {
     text-align: center;
     width: 300px;
     margin: 10px 10px 5px;
-    height: 300px;
     box-shadow: 0 1px 25px rgba(0, 0, 0, 0.686);
     background-color: white;
     border-radius: 20px;
     transform: rotateX(-180deg);
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .productListing .card .header {
-    display: block;
+    display: flex;
     margin: 10px auto;
+    justify-content: center;
 }
 
 .productListing .card .child {
@@ -103,7 +107,11 @@ body {
     background-color: rgb(113, 3, 113);
 }
 
+.card a {
+    display: flex;
+}
+
 .card ion-icon {
     color: red;
     margin-left: 30%;
-  }
+}
