--- a/src/main/resources/static/css/contact.css
+++ b/src/main/resources/static/css/contact.css
@@ -9,7 +9,7 @@ body {
     background-repeat: no-repeat;
     background-color: black;
     font-size: 12px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     height: 100vh;
     -webkit-background-size: cover;
     background-size: cover;
@@ -123,7 +123,7 @@ button {
 .nav li a {
     color: rgb(242, 239, 244);
     padding: 5px 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-size: 15px;
     text-decoration: none;
 }
