--- a/src/main/resources/static/css/aboutus.css
+++ b/src/main/resources/static/css/aboutus.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Ubuntu", sans-serif;
 }
 
 .about-us img {
@@ -33,7 +33,7 @@
     color: aliceblue;
     margin-bottom: 18px;
     font-size: 50px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Ubuntu", sans-serif;
 }
 
 .info p {
@@ -46,7 +46,7 @@
 
 button {
     color: antiquewhite;
-    background: rgb(200, 37, 200);
+    background: rgb(113, 3, 113);
     font-weight: bold;
     text-decoration: none;
     padding: 15px 30px;
@@ -58,24 +58,7 @@ button {
 button:hover {
     background: rgb(81, 2, 83);
     cursor: pointer;
-    border: 3px solid rgb(200, 37, 200);
-}
-
-.button1 {
-    color: antiquewhite;
-    background: rgb(200, 37, 200);
-    font-weight: bold;
-    text-decoration: none;
-    padding: 15px 30px;
-    border-radius: 28px;
-    border: 2px solid transparent;
-    transition: .3s;
-}
-
-button1:hover {
-    background: rgb(81, 2, 83);
-    cursor: pointer;
-    border: 3px solid rgb(200, 37, 200);
+    border: 3px solid rgb(113, 3, 113);
 }
 
 #aboutus {
