--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -17,13 +17,14 @@
             <div class="info">
                 <h1>Who We Are </h1>
                 <p
-                    style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: aliceblue;">
+                
+                    style="font-family: 'Ubuntu', sans-serif; color: aliceblue;">
                     Welcome to our Rare Fish Market, where we offer an exclusive collection of some of the most unique
                     and rare species of fish found in the world. Our passion for marine life and our commitment to
                     providing the best quality products has earned us a reputation as one of the leading online
                     retailers for rare fish.</p>
-                <a th:href="categories"><button type="button">Discover More</button></a>
-                <a href="/"><button type="button1">Home</button></a>
+                <a th:href="categories"><button class="button">Discover More</button></a>
+                <a href="/"><button class="button">Home</button></a>
             </div>
         </div>
     </section>
