--- a/src/main/resources/templates/admin-create-product.html
+++ b/src/main/resources/templates/admin-create-product.html
@@ -29,56 +29,84 @@
                     <h2>New Product</h2>
                     <a th:href="@{/admin/products}" class="btn" id="return">Return</a>
                 </div>
+                <div class="alert alert-danger" style="color: red;" th:text="${error}" th:if="${error}"></div>
                 <table class="product-table">
                     <form th:action="@{/admin/products/save}" th:object="${product}" method="POST" autocomplete="off"
                         class="create-form">
                         <tr>
                             <div class="field">
-                                <td><label for="name">Name</label></td>
-                                <td><input type="text" name="name" id="name" required th:field="*{name}" /></td>
+                                <td style="width: 20%;"><label for="name">Name</label></td>
+                                <td style="width: 50%;"><input type="text" name="name" id="name" required
+                                        th:field="*{name}" /></td>
+                                <td style="width: 30%;">
+                                    <p class="alert alert-danger" th:if="${#fields.hasErrors('name')}"
+                                        th:errors="*{name}"></p>
+                                </td>
                             </div>
                         </tr>
                         <tr>
                             <div class="field">
-                                <td><label for="description">Description</label></td>
-                                <td><input type="text" name="description" id="description" required
+                                <td style="width: 20%;"><label for="description">Description</label></td>
+                                <td style="width: 50%;"><input type="text" name="description" id="description" required
                                         th:field="*{description}" /></td>
+                                <td style="width: 30%;">
+                                    <p class="alert alert-danger" th:if="${#fields.hasErrors('description')}"
+                                        th:errors="*{description}"></p>
+                                </td>
                             </div>
                         </tr>
                         <tr>
                             <div class="field">
-                                <td><label for="image">Image</label></td>
-                                <td><input type="text" name="image" id="image" required th:field="*{image}" /></td>
+                                <td style="width: 20%;"><label for="image">Image</label></td>
+                                <td style="width: 50%;"><input type="text" name="image" id="image" required
+                                        th:field="*{image}" /></td>
+                                <td style="width: 30%;">
+                                    <p class="alert alert-danger" th:if="${#fields.hasErrors('image')}"
+                                        th:errors="*{image}"></p>
+                                </td>
                             </div>
                         </tr>
                         <tr>
                             <div class="field">
-                                <td><label for="category">Category</label></td>
-                                <td><select name="category" id="category" required th:field="*{category}">
+                                <td style="width: 20%;"><label for="category">Category</label></td>
+                                <td style="width: 50%;"><select name="category" id="category" required
+                                        th:field="*{category}">
                                         <div th:each="category : ${categories}">
                                             <option th:value="${category.name}" th:text="${category.name}"></option>
                                         </div>
                                     </select></td>
+                                <td style="width: 30%;">
+                                    <p class="alert alert-danger" th:if="${#fields.hasErrors('category')}"
+                                        th:errors="*{category}"></p>
+                                </td>
                             </div>
                         </tr>
                         <tr>
                             <div class="field">
-                                <td><label for="price">Price</label></td>
-                                <td><input type="number" min="0" step="0.01" name="price" id="price" required
-                                        th:field="*{price}" /></td>
+                                <td style="width: 20%;"><label for="price">Price</label></td>
+                                <td style="width: 50%"><input type="number" min="0" step="0.01" name="price" id="price"
+                                        required th:field="*{price}" /></td>
+                                <td style="width: 30%;">
+                                    <p class="alert alert-danger" th:if="${#fields.hasErrors('price')}"
+                                        th:errors="*{price}"></p>
+                                </td>
                             </div>
                         </tr>
                         <tr>
                             <div class="field">
-                                <td><label for="stock">Stock</label></td>
-                                <td><input type="number" min="0" step="1" name="stock" id="stock" required
-                                        th:field="*{stock}" /></td>
+                                <td style="width: 20%;"><label for="stock">Stock</label></td>
+                                <td style="width: 50%;"><input type="number" min="0" step="1" name="stock" id="stock"
+                                        required th:field="*{stock}" /></td>
+                                <td style="width: 30%;">
+                                    <p class="alert alert-danger" th:if="${#fields.hasErrors('stock')}"
+                                        th:errors="*{stock}"></p>
+                                </td>
                             </div>
                         </tr>
                 </table>
                 <div class="form_action--button">
                     <input type="submit" value="Submit">
-                    <input type="reset" value="Reset">
+                    <input type="reset" value="Reset" th:onclick="customReset('/admin/products/new');">
                 </div>
                 </form>
 
@@ -93,6 +121,7 @@
                             <th>Stock</th>
                         </tr>
                         <tr>
+                            <div class="alert alert-primary" role="alert" th:text="${success}" th:if="${success}"></div>
                             <td style="text-align: center; font-weight: 300;" th:if="${preProduct != null}"
                                 th:text="${preProduct.name}"></td>
                             <td style="text-align: center; font-weight: 300;" th:if="${preProduct != null}"
