--- a/src/main/resources/templates/admin-update-product.html
+++ b/src/main/resources/templates/admin-update-product.html
@@ -40,29 +40,41 @@
                         method="POST" autocomplete="off" class="create-form">
                         <tr>
                             <div class="field">
-                                <td><label for="name">Name</label></td>
-                                <td><input type="text" name="name" id="name" required th:name="name"
-                                        th:value="${product.name}" /></td>
+                                <td style="width: 20%;"><label for="name">Name</label></td>
+                                <td style="width: 50%;"><input type="text" name="name" id="name" required th:name="name"
+                                        th:field="*{name}" /></td>
+                                <td style="width: 30%;">
+                                    <p class="alert alert-danger" th:if="${#fields.hasErrors('name')}"
+                                        th:errors="*{name}"></p>
+                                </td>
                             </div>
                         </tr>
                         <tr>
                             <div class="field">
-                                <td><label for="description">Description</label></td>
-                                <td><input type="text" name="description" id="description" required
-                                        th:name="description" th:value="${product.description}" /></td>
+                                <td style="width: 20%;"><label for="description">Description</label></td>
+                                <td style="width: 50%;"><input type="text" name="description" id="description" required
+                                        th:name="description" th:field="*{description}" /></td>
+                                <td style="width: 30%;">
+                                    <p class="alert alert-danger" th:if="${#fields.hasErrors('description')}"
+                                        th:errors="*{description}"></p>
+                                </td>
                             </div>
                         </tr>
                         <tr>
                             <div class="field">
-                                <td><label for="image">Image</label></td>
-                                <td><input type="text" name="image" id="image" required th:name="image"
-                                        th:value="${product.image}" /></td>
+                                <td style="width: 20%;"><label for="image">Image</label></td>
+                                <td style="width: 50%;"><input type="text" name="image" id="image" required th:name="image"
+                                        th:field="*{image}" /></td>
+                                <td style="width: 30%;">
+                                    <p class="alert alert-danger" th:if="${#fields.hasErrors('image')}"
+                                        th:errors="*{image}"></p>
+                                </td>
                             </div>
                         </tr>
                         <tr>
                             <div class="field">
-                                <td><label for="category">Category</label></td>
-                                <td><select name="category" id="category" required th:field="*{category}">
+                                <td style="width: 20%;"><label for="category">Category</label></td>
+                                <td style="width: 50%;"><select name="category" id="category" required th:field="*{category}">
                                         <option th:each="category : ${categories}" th:value="${category.name}"
                                             th:text="${category.name}" th:if="${category.name == product.category.name}"
                                             selected>
@@ -72,26 +84,39 @@
                                             th:unless="${category.name == product.category.name}">
                                         </option>
                                     </select></td>
+                                <td style="width: 30%;">
+                                    <p class="alert alert-danger" th:if="${#fields.hasErrors('category')}"
+                                        th:errors="*{category}"></p>
+                                </td>
                             </div>
                         </tr>
                         <tr>
                             <div class="field">
-                                <td><label for="price">Price</label></td>
-                                <td><input type="number" min="0" step="0.01" name="price" id="price" required
-                                        th:name="price" th:value="${product.price}" /></td>
+                                <td style="width: 20%;"><label for="price">Price</label></td>
+                                <td style="width: 50%;"><input type="number" min="0" step="0.01" name="price" id="price" required
+                                        th:name="price" th:field="*{price}" /></td>
+                                <td style="width: 30%;">
+                                    <p class="alert alert-danger" th:if="${#fields.hasErrors('price')}"
+                                        th:errors="*{price}"></p>
+                                </td>
                             </div>
                         </tr>
                         <tr>
                             <div class="field">
-                                <td><label for="stock">Stock</label></td>
-                                <td><input type="number" min="0" step="1" name="stock" id="stock" required
-                                        th:name="stock" th:value="${product.inventory.stock}" /></td>
+                                <td style="width: 20%;"><label for="stock">Stock</label></td>
+                                <td style="width: 50%;"><input type="number" min="0" step="1" name="stock" id="stock" required
+                                        th:name="stock" th:field="*{stock}" /></td>
+                                <td style="width: 30%;">
+                                    <p class="alert alert-danger" th:if="${#fields.hasErrors('stock')}"
+                                        th:errors="*{stock}"></p>
+                                </td>
                             </div>
                         </tr>
                 </table>
                 <div class="form_action--button">
                     <input type="submit" value="Submit">
-                    <input type="reset" value="Reset">
+                    <a th:href="@{/admin/products?productId={id}(id=${product.ID})}">
+                        <input type="button" name="reset" value="Reset"></a>
                 </div>
                 </form>
             </div>
