--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -24,7 +24,7 @@
         .nav li a {
             color: rgb(242, 239, 244);
             padding: 5px 20px;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            font-family: "Ubuntu", sans-serif;
             font-size: 15px;
             text-decoration: none;
         }
@@ -40,13 +40,12 @@
 
 
         form {
-
             height: auto;
             width: auto;
             background-color: rgba(113, 3, 113);
             position: absolute;
             transform: translate(-50%, -50%);
-            top: 55%;
+            top: 60%;
             left: 50%;
             border-radius: 20px;
             border: 2px solid rgba(0, 0, 0, 0.1);
@@ -55,7 +54,7 @@
         }
 
         form * {
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            font-family: "Ubuntu", sans-serif;
             width: 400px;
             color: white;
             letter-spacing: 2px;
@@ -109,26 +108,44 @@
             width: 1165px;
             margin: auto;
         }
+
+        .alert {
+            padding: 0.75rem 1.25rem;
+            margin-bottom: 1rem;
+            border: 1px solid transparent;
+            border-radius: 0.25rem;
+            text-align: center;
+        }
+
+        .alert-danger {
+            color: #721c24;
+            background-color: #f8d7da;
+            border-color: #f5c6cb;
+        }
     </style>
 </head>
 
 <div class="holder">
     <div th:replace="~{fragments/navbar :: navbar}"></div>
 </div>
-<form th:action="@{/register}" th:object="${user}" method="POST">
+<form th:action="@{/signup}" th:object="${userDto}" method="POST">
     <h3>Sign-Up Here</h3>
 
     <label for="firstname">First Name: </label>
-    <input type="text" id="firstname" name="firstname" th:field="*{firstName}" />
+    <input type="text" id="firstname" name="firstname" th:field="*{firstName}" required />
+    <p class="alert alert-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></p>
 
     <label for="lastname">Last Name: </label>
-    <input type="text" id="lastname" name="lastname" th:field="*{lastName}" />
+    <input type="text" id="lastname" name="lastname" th:field="*{lastName}" required />
+    <p class="alert alert-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></p>
 
     <label for="email">Email: </label>
-    <input type="text" id="email" name="email" th:field="*{email}" />
+    <input type="text" id="email" name="email" th:field="*{email}" required />
+    <p class="alert alert-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
 
     <label for="password">Password: </label>
-    <input type="password" id="password" name="password" th:field="*{password}" />
+    <input type="password" id="password" name="password" th:field="*{password}" required />
+    <p class="alert alert-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
 
     <button>Sign Up</button>
 
