--- a/src/main/resources/static/css/error.css
+++ b/src/main/resources/static/css/error.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Ubuntu", sans-serif;
 }
 
 header {
@@ -23,6 +24,7 @@ header {
     top: 30%;
     left: 0;
     right: 0;
+    font-size: 14px;
 }
 
 .text h1 {
@@ -51,4 +53,4 @@ header {
 .holder {
     width: 1165px;
     margin: auto;
-  }
+}
