--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .holder {
@@ -41,6 +42,7 @@ header {
   text-align: center;
   color: blueviolet;
   font-size: 50px;
+  
 }
 
 .text a {
