Added Ubuntu font to each page via stylesheet

--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>About us</title>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
     <link rel="stylesheet" th:href="@{/css/aboutus.css}" />
     <link rel="stylesheet" th:href="@{/css/navbar.css}" />
 </head>
