--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/navbar.css}" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 </head>
 
 <body>
