--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -7,9 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Categories</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap"
-    rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" th:href="@{/css/categories.css}" />
   <link rel="stylesheet" th:href="@{/css/navbar.css}" />
@@ -55,65 +53,6 @@
   </div>
   <script th:inline="javascript">
     var products = /*[[${products}]]*/[];
-    /*     let products = [
-          {
-            name: 'FROGFISH ANTENNARIUS BIOCELLATUS     10CM    ',
-            image1: './images/b8.png',
-            image2: './images/b8.png',
-            curr_price: '£ 400.00'
-          },
-          {
-            name: ' GIN RIN TANCHO KOI CARP   ',
-            image1: './images/c6.png',
-            image2: './images/c6.png',
-            curr_price: '£ 4,995.00'
-          },
-          {
-            name: 'PEACOCK SNAKEHEAD CHANNA BARCA 60CM    ',
-            image1: './images/t7.png',
-            image2: './images/t7.png',
-            curr_price: '£ 4,000.00'
-          },
-          {
-            name: 'FULL PEARL PLATINIUM GOLDEN BASE FLOWERHORN 12CM   ',
-            image1: './images/h7.png',
-            image2: './images/h7.png',
-            curr_price: '£ 450.00'
-          },
-          {
-            name: 'GIANT FRESHWATER PUFFER FISH TETRADON MBU 70CM   ',
-            image1: './images/p7.png',
-            image2: './images/p7.png',
-            curr_price: '£ 1,000.00'
-          },
-          {
-            name: 'XANTHIC GOLDEN AROWANA SCLEROPAGES FOMOSUS 20CM   ',
-            image1: './images/t4.png',
-            image2: './images/t4.png',
-            curr_price: '£ 20,000.00'
-          },
-    
-          {
-            name: 'MARINE BASSLET FISH     ',
-            image1: './images/m6.png',
-            image2: './images/m6.png',
-            curr_price: '£ 300.00'
-          },
-    
-    
-          {
-            name: 'LEAF SCORPION FISH ',
-            image1: './images/b1.png',
-            image2: './images/b1.png',
-            curr_price: '£ 550.00'
-          },
-          {
-            name: 'MARINE BAT FISH   ',
-            image1: './images/m7.png',
-            image2: './images/m7.png',
-            curr_price: '£ 300.00'
-          },
-        ] */
     function formatPrice(x) {
       return x.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ",");
     }
