--- a/src/main/resources/templates/net.html
+++ b/src/main/resources/templates/net.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orders</title>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
     <link rel="stylesheet" th:href="@{/css/net.css}" />
     <link rel="stylesheet" th:href="@{/css/navbar.css}" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                     </section>
-                    <a th:href="@{/net/submit}" class="btn">Checkout</a>
+                    <a th:href="@{/net/checkout}" class="btn">Checkout</a>
                 </div>
 
                 <div th:unless="${netitems != null and !netitems.empty}">
@@ -55,12 +55,6 @@
             </div>
         </div>
     </div>
-
-    <script th:inline="javascript" type="text/javascript">
-        function rowClicked(value) {
-            location.href = "/orders?orderId=" + value;
-        }
-    </script>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
