Replaced 'Add To Cart' with 'Add To Net' text

--- a/src/main/resources/templates/fishdetail.html
+++ b/src/main/resources/templates/fishdetail.html
@@ -61,7 +61,7 @@
                                 </span>
                             </div>
                             <div>
-                                <button class="btn-flat btn-hover">Add To Cart</button>
+                                <button class="btn-flat btn-hover">Add To Net</button>
                             </div>
                         </div>
                     </div>
