--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -66,6 +66,15 @@
                 </li>
 
                 <li>
+                    <a th:href="@{/admin/notification}">
+                        <span class="icon">
+                            <ion-icon name="notifications-outline"></ion-icon>
+                        </span>
+                        <span class="title">Notifications</span>
+                    </a>
+                </li>
+
+                <li>
                     <a th:href="@{/admin/analytics}">
                         <span class="icon">
                             <ion-icon name="analytics"></ion-icon>
